--- a/src/bubble.css
+++ b/src/bubble.css
@@ -13,7 +13,7 @@
 
 .bubble-content {
   margin-right: 25%;
-  background-color: #eee;
+  background-color: #1B1D1E;
   position: relative;
 }
 
@@ -26,7 +26,7 @@
   left: -12px;
   height: 26px;
   width: 30px;
-  background: #eee;
+  background: #1B1D1E;
   border-bottom-right-radius: 20px;
 }
 
